+SonarLint edits